--- a/view/admin/scss/admin/3-component/_header.scss
+++ b/view/admin/scss/admin/3-component/_header.scss
@@ -88,7 +88,7 @@
 	margin-right: 15px;
 	padding: 10px 0;
 	@media(max-width: 480px) { display: none; }
-	
+
 	&:focus-within {
 		width: 100%;
 	}
@@ -96,6 +96,7 @@
 
 
 .app-search__input {
+	outline: none;
 	width: 100%;
 	border: 0;
 	padding: 5px 10px;
@@ -104,11 +105,6 @@
 	background-color: rgba(255,255,255,0.8);
 	transition: background-color 0.3s ease;
 	&::placeholder { color: rgba(0,0,0,0.4); }
-
-	&:focus {
-		// width: 100%;
-		color: red;
-	}
 }
 .app-search__button {
 	position: absolute;
