--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -862,22 +862,22 @@
         }
     }
     
-    @media only screen and (min-width: 992px) and (max-width: 1300px) {
-        .header_social .hide_small {
+    @media only screen and (max-width: 1140px) {
+        .header_social .hide {
             display: none!important;
         }
     }
     
-    @media only screen and (min-width: 1280px) {
+    @media only screen and (min-width: 1140px) {
         .header_social .small-button {
             display: none!important;
         }
     }
     
     @media only screen and (max-width: 1280px) {
-        .header_social li {
-            // display: none;
-        }
+        // .header_social li {
+        //     display: none;
+        // }
         .header_social .hotline {
             display: none;
         }
