--- a/view/admin/scss/admin/3-component/_header.scss
+++ b/view/admin/scss/admin/3-component/_header.scss
@@ -87,6 +87,7 @@
 	align-self: center;
 	margin-right: 15px;
 	padding: 10px 0;
+	transition: all .5s;
 	@media(max-width: 480px) { display: none; }
 
 	&:focus-within {
