tile-table-fix-head

--- a/view/admin/admin.scss
+++ b/view/admin/admin.scss
@@ -552,3 +552,21 @@
         }
     }
 }
+
+.tile-table-fix-head {
+    height: calc(100vh - 225px);
+    overflow-y: scroll;
+
+    table {
+        overflow-y: auto;
+        height: 100%;
+
+        thead th {
+            color: #ffffff;
+            position: sticky;
+            top: 0;
+            z-index: 400;
+            border: 0;
+        }
+    }
+}
