fix display image in section StaffGroup

--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -60,6 +60,11 @@ $breakpoint-xs-landscape: 'only screen and (min-width:480px) and (max-width:767p
         margin-bottom: 50px;
     }
 }
+.team_name{
+    font-size: 24px;
+    font-weight: 600;
+    color: #404040;
+}
 
 .about-video .button {
     width: 100px;
