--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -272,6 +272,7 @@ section {
 
 .parallax_background {
     position: absolute;
+    color:#4ca758!important;
     top: 0;
     left: 0;
     width: 100%;
