Sửa css outline button đăng ký tư vấn

--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -913,3 +913,8 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
     background: #FFFFFF;
     padding: 0px;
 }
+
+.intro .intro_form .button {
+    border: solid 2px #fd556d;
+    outline: none;
+}
