--- a/view/component/input.scss
+++ b/view/component/input.scss
@@ -11,3 +11,16 @@
 .validated       .custom-select.valid {
   border-color: #28a745;
 }
+
+.custom-control-input:checked~.custom-control-label::before {
+  color: #fff;
+  border-color: #7B1FA2;
+}
+
+.custom-control-input:checked~.custom-control-label.invalid::before {
+  background-color:#dc3545;
+}
+
+.custom-control-input:checked~.custom-control-label.valid::before {
+  background-color: #28a745;
+}
