--- a/view/admin/admin.scss
+++ b/view/admin/admin.scss
@@ -554,8 +554,8 @@
 }
 
 .tile-table-fix-head {
-    height: calc(100vh - 225px);
-    overflow-y: scroll;
+    height: calc(100vh - 252px);
+    // overflow-y: scroll;
     table {
         overflow-y: auto;
         height: 100%;
