--- a/view/admin/scss/admin/1-tools/bootstrap-source/_modal.scss
+++ b/view/admin/scss/admin/1-tools/bootstrap-source/_modal.scss
@@ -164,5 +164,9 @@
 }
 
 @include media-breakpoint-up(lg) {
-  .modal-lg { max-width: $modal-lg; }
+  .modal-lg, .modal-xl { max-width: $modal-lg; }
+}
+
+@include media-breakpoint-up(xl) {
+  .modal-xl { max-width: $modal-xl; }
 }
