--- a/view/component/chat.scss
+++ b/view/component/chat.scss
@@ -14,17 +14,17 @@ img{ max-width:100%;}
 .top_spac{ margin: 20px 0 0;}
 
 
-.recent_heading {float: left; width:40%;}
-.srch_bar {
-  display: inline-block;
-  text-align: right;
-  width: 60%;
-}
+.recent_heading {float: left; width:100%;}
+// .srch_bar {
+//   display: inline-block;
+//   text-align: right;
+//   width: 40%;
+// }
 .headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
 
 .recent_heading h4 {
   color: #05728f;
-  font-size: 21px;
+  font-size: 17px;
   margin: auto;
 }
 .srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
@@ -89,7 +89,7 @@ img{ max-width:100%;}
 .mesgs {
   float: left;
   padding: 30px 15px 0 25px;
-  width: 60%;
+
 }
 .mesgs-all-chat {
     float: left;
