Large allowClear button

--- a/view/admin/admin.scss
+++ b/view/admin/admin.scss
@@ -586,3 +586,14 @@
     font-weight: 400;
     font-size: 1.1rem;
 }
+
+.admin-form-select {
+    span.select2-selection__clear {
+        color: #888;
+        font-size: 22px;
+        font-weight: unset;
+        margin-right: 10px;
+        height: 36px;
+        line-height: 34px;
+    }
+}
