fix UI chat + them permission

--- a/view/component/chat.scss
+++ b/view/component/chat.scss
@@ -67,7 +67,7 @@ img{ max-width:100%;}
 
 .inbox_chat { height: 350px; overflow-y: scroll;}
 
-.active_chat{ background:#ebebeb;}
+.active_chat{ background:#ddd;}
 
 .incoming_msg_img {
   display: inline-block;
