--- a/view/admin/scss/_comment.scss
+++ b/view/admin/scss/_comment.scss
@@ -3,10 +3,30 @@
 }
 
 .comments-list, .comment-respond {
+  ul {
+    padding-inline-start: 0 !important;
+
+    li {
+      margin-bottom: 25px;
+
+      &.threaded-comments {
+        margin-left: 50px;
+      }
+    }
+  }
+
   .comments-details {
+    &.waiting {
+      background-color: rgba(#ffc107, 0.4);
+    }
+
+    &.reject {
+      background-color: rgba(255, 0, 0, 0.4);
+    }
+
     .comments-list-img {
-        float: left;
-        margin-right: 15px;
+      float: left;
+      margin-right: 15px;
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -16,11 +36,9 @@
     }
 
     .comments-content-wrap {
-        margin: 0 0 15px 80px;
-        padding: 10px;
-        position: relative;
-      margin-bottom: 0;
-      padding-top: 0;
+      position: relative;
+      margin: 0 0 0 80px;
+      padding: 0 10px 10px;
 
       &.contact-form textarea {
         height: auto;
