--- a/view/admin/admin.scss
+++ b/view/admin/admin.scss
@@ -599,3 +599,11 @@
         line-height: 34px;
     }
 }
+
+.limit-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;
+}
