push tạm sửa thời khóa biểu cho admin và QTV

--- a/modules/mdDaoTao/fwTimeTable/timeTable.scss
+++ b/modules/mdDaoTao/fwTimeTable/timeTable.scss
@@ -12,7 +12,7 @@ img{ max-width:100%;}
 .top_spac{ margin: 20px 0 0;}
 
 
-.recent_heading {float: left; width:100%;}
+.recent_heading { width:100%;}
 .headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
 
 .recent_heading h4 {
@@ -49,7 +49,5 @@ img{ max-width:100%;}
   margin: 0;
   padding: 18px 16px 10px;
 }
-
-.lecturer_time_table { overflow-y: scroll;}
 
 .active_lecturer{ background:#ddd;}
