--- a/view/admin/admin.pug
+++ b/view/admin/admin.pug
@@ -13,6 +13,8 @@ html(lang='vi')
         script(type='text/javascript' src='/js/popper.min.js')
         script(type='text/javascript' src='/js/jquery-ui.min.js')
         script(type='text/javascript' src='/js/bootstrap.min.js')
+        script(type='text/javascript' src='/js/plugins/moment.min.js')
+        script(type='text/javascript' src='/js/plugins/fullcalendar.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-datepicker.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-datetimepicker.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-notify.min.js')
