--- a/view/admin/admin.pug
+++ b/view/admin/admin.pug
@@ -9,18 +9,19 @@ html(lang='vi')
         link(rel='stylesheet' type='text/css' href='/css/font-awesome.min.css')
     body
         #app.app.sidebar-mini.rtl
-        script(type='text/javascript' src='/js/jquery.min.js')
+        //- script(type='text/javascript' src='/js/jquery.min.js')
+        script(type='text/javascript' src='/js/plugins/jquery-3.2.1.min.js')
         script(type='text/javascript' src='/js/popper.min.js')
         script(type='text/javascript' src='/js/jquery-ui.min.js')
         script(type='text/javascript' src='/js/bootstrap.min.js')
         script(type='text/javascript' src='/js/plugins/moment.min.js')
-        script(type='text/javascript' src='/js/plugins/fullcalendar.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-datepicker.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-datetimepicker.min.js')
         script(type='text/javascript' src='/js/plugins/bootstrap-notify.min.js')
         script(type='text/javascript' src='/js/plugins/select2.min.js')
         script(type='text/javascript' src='/js/plugins/chart.js')
         script(type='text/javascript' src='/js/plugins/ckeditor/ckeditor.js')
+        script(type='text/javascript' src='/js/plugins/fullcalendar.min.js')
         //- script(type='text/javascript' src='/js/plugins/jsBarcode.all.min.js')
         //- script(type='text/javascript' src='/js/plugins/qrcode.min.js')
         //script(type='text/javascript' src='https://cdn.ckeditor.com/4.10.1/full/ckeditor.js')
