Sửa phần thời khóa biểu calendar

--- a/view/admin/admin.pug
+++ b/view/admin/admin.pug
@@ -9,8 +9,7 @@ html(lang='vi')
         link(rel='stylesheet' type='text/css' href='/css/font-awesome.min.css')
     body
         #app.app.sidebar-mini.rtl
-        //- script(type='text/javascript' src='/js/jquery.min.js')
-        script(type='text/javascript' src='/js/plugins/jquery-3.2.1.min.js')
+        script(type='text/javascript' src='/js/jquery.min.js')
         script(type='text/javascript' src='/js/popper.min.js')
         script(type='text/javascript' src='/js/jquery-ui.min.js')
         script(type='text/javascript' src='/js/bootstrap.min.js')
