--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -678,7 +678,7 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
     left: 0;
     width: 336px;
     height: 80px;
-    background: #57ccc3;
+    background: #199d76;
     line-height: 80px;
     text-align: center;
     font-size: 24px;
@@ -786,8 +786,8 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
 
 .intro_button:hover {
     background: transparent;
-    border: solid 2px #fd556d;
-    color: #fd556d;
+    border: solid 2px #199d76;
+    color: #199d76;
 }
 
 
@@ -860,7 +860,7 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
 }
 
 .intro .intro_form .button {
-    border: solid 2px #fd556d;
+    border: solid 2px #199d76;
     outline: none;
 }
 
