--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -669,7 +669,7 @@ $breakpoint-xs: 'only screen and (max-width:767px)';
     padding-right: 34px;
     padding-bottom: 36px;
     padding-top: 112px;
-    box-shadow: 0px 25px 38px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0px 25px 38px rgba(0, 0, 0, 0.2);
 }
 
 .intro_form_title {
