--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -369,7 +369,7 @@ section {
     left: 0;
     width: 100vw;
     z-index: 100;
-    background: #FFFFFF;
+    background: #199d76;
 }
 
 .header_content {
